add the base healthworld base activity

--- a/healthworld/res/values/strings.xml
+++ b/healthworld/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, HealthworldActivity!</string>
-    <string name="app_name">Healthworld</string>
+    <string name="app_name">养生</string>
     <string-array name="tab_text">
         <item>天天养生</item>
         <item>养生书籍</item>
