--- a/baseworld/res/values/strings.xml
+++ b/baseworld/res/values/strings.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">baseworld</string>
+
+    <string name="app_icon_tip">app_icon</string>
+
     <string-array name="tab_text"></string-array>
-    <string name="app_confirm">确定</string>
-    <string name="app_cancel">取消</string>
+
+    <string name="app_upgrade_confirm">确定</string>
+    <string name="app_upgrade_cancel">取消</string>
     <string name="check_new_version">发现新版本,确定更新吗?</string>
+    <string name="app_upgrade_download_sucess">新版本下载成功,开始安装.</string>
+    <string name="app_upgrade_download_fail">新版本下载失败，请稍后再试.</string>
+
 </resources>
