--- a/baseworld/res/values/strings.xml
+++ b/baseworld/res/values/strings.xml
@@ -9,6 +9,12 @@
     <string name="app_upgrade_confirm">确定</string>
     <string name="app_upgrade_cancel">取消</string>
     <string name="check_new_version">发现新版本,确定更新吗?</string>
+    <string name="check_new_version_title">检查新版本</string>
+    <string name="check_new_version_message">正在获取新版本信息 ....</string>
+    <string name="check_new_version_no_network">未找到网络连接，请设置后重试!</string>
+    <string name="check_new_version_null">未找到新版本信息，请稍后再试!</string>
+    <string name="check_new_version_exception">获取新版本信息出错，请稍后再试!</string>
+    <string name="check_new_version_latest">已经是最新版本!</string>
     <string name="app_upgrade_download_sucess">新版本下载成功,开始安装.</string>
     <string name="app_upgrade_download_fail">新版本下载失败，请稍后再试.</string>
 
