improve the ui and code style:
1. change catogory count show position
2. change the bg color to fffffa
3. ref to res for string instead of write it in the xml directly
4. clean some invalid code and layout files

--- a/baseworld/res/values/strings.xml
+++ b/baseworld/res/values/strings.xml
@@ -6,6 +6,11 @@
 
     <string-array name="tab_text"></string-array>
 
+
+    <string name="app_back">返回</string>
+    <string name="app_loading">请稍候，正在拉取数据....</string>
+    <string name="app_refresh">刷新</string>
+
     <string name="app_upgrade_confirm">确定</string>
     <string name="app_upgrade_cancel">取消</string>
     <string name="check_new_version">发现新版本,确定更新吗?</string>
