--- a/floworld/res/values/strings.xml
+++ b/floworld/res/values/strings.xml
@@ -24,7 +24,9 @@
 
     <string name="latest_title">最新图片</string>
     <string name="category_title">分类图片</string>
+    <string name="search_title">搜索</string>
     <string name="company_title">合作</string>
+    <string name="discuss_details_title">正文</string>
 
     <string name="share_pic_title">《%s》分享来自《花界》最新精美图片</string>
     <string name="share_pic_text">#花界#《%s》分享来自《@huajie_mobile》最新精美图片</string>
