many add and fix:
1. add two discuss articles
2. impl the jump to market
3. impl share app to freinds
4. impl feedback suggestion
5. improve the aboout activity
6. add smsto and tel path to contact us
7. add the donate item for preparing the android epay
8. improve the icon

--- a/baseworld/res/values/strings.xml
+++ b/baseworld/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="app_back">返回</string>
     <string name="app_loading">请稍候，正在拉取数据....</string>
     <string name="app_refresh">刷新</string>
+    <string name="app_share">分享</string>
 
     <string name="app_upgrade_confirm">确定</string>
     <string name="app_upgrade_cancel">取消</string>
