--- a/baseworld/res/values/strings.xml
+++ b/baseworld/res/values/strings.xml
@@ -9,6 +9,8 @@
 
     <string name="app_back">返回</string>
     <string name="app_loading">请稍候，正在拉取数据....</string>
+    <string name="app_loading_none">未找到数据.</string>
+    <string name="app_loading_fail">数据加载失败，请稍后再试.</string>
     <string name="app_refresh">刷新</string>
     <string name="app_share">分享</string>
 
