--- a/baseworld/res/values/strings.xml
+++ b/baseworld/res/values/strings.xml
@@ -32,4 +32,22 @@
     <string name="setting_about_copyright_1">开源项目 版权所有</string>
     <string name="setting_about_copyright_2">Copyright © 2011~2012 杰风工作室.</string>
     <string name="setting_about_copyright_3">All Rights Reserved.</string>
+
+    <!-- alipay -->
+    <string name="activity_remote_service_binding">AppDemo4</string>
+    <string name="remote_call_failed">Failure calling remote service</string>
+    <string name="partnerHint">"partner"</string>
+    <string name="sellerHint">"seller"</string>
+    <string name="out_trade_noHint">"out_trade_no"</string>
+    <string name="subjectHint">"subject"</string>
+    <string name="bodyHint">"body"</string>
+    <string name="total_feeHint">"total_fee"</string>
+    <string name="notify_urlHint">"notify_url"</string>
+    <string name="charsetHint">"charset"</string>
+    <string name="signTypeHint">"signType"</string>
+    <string name="confirm_install_hint">"安装提示"</string> 
+    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
+    <string name="Ensure">"确定"</string>
+    <string name="Cancel">"取消"</string>
+    <string name="check_sign_failed">您的订单信息已被非法篡改。</string> 
 </resources>
