--- a/baseworld/res/values/strings.xml
+++ b/baseworld/res/values/strings.xml
@@ -49,5 +49,8 @@
     <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
     <string name="Ensure">"确定"</string>
     <string name="Cancel">"取消"</string>
-    <string name="check_sign_failed">您的订单信息已被非法篡改。</string> 
+    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
+
+    <string name="donate_subject">为开源项目捐赠</string>
+    <string name="donate_body">你的支持，让我们做的更好！</string>
 </resources>
