improve the refresh listview widget:
1. add the last update tip
2. not refresh when not pull down enough, just return
3. fix the fling to when firstVisibleItem is 0, it need NONE_PULL_REFRESH

--- a/baseworld/res/values/strings.xml
+++ b/baseworld/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="app_list_header_refresh_down">下拉刷新</string>
     <string name="app_list_header_refreshing">正在刷新</string>
     <string name="app_list_header_refresh_up">松开刷新</string>
+    <string name="app_list_header_refresh_last_update">上次更新于:%s</string>
     <string name="app_list_footer_more">更多</string>
     <string name="app_list_footer_loading">正在加载....</string>
 
